eventsProject/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-app
  labels:
    name: nginx-app
    environment: production
