eventsProject/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventsproject-deployment
  labels:
    app: eventsproject
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eventsproject
  template:
    metadata:
      labels:
        app: eventsproject
    spec:
      containers:
      - name: eventsproject
        image: yasminebenslimane123/devopsimage:latest
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /events/actuator/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /events/actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
