eventsProject/k8s/event-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-deployment
  labels:
    app: event
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec:
      containers:
      - name: event
        image: oussemahamouda/eventsproject:166
        ports:
        - containerPort: 3110
