eventsProject/k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-app
  labels:
    app: events-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: events-app
  template:
    metadata:
      labels:
        app: events-app
    spec:
      containers:
      - name: events-app
        image: yasminebenslimane123/devopsimage:latest
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: events-app-service
spec:
  type: LoadBalancer
  selector:
    app: events-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
