eventsProject/k8s/event-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service
spec:
  selector:
    app: event
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
