eventsProject/k8s/nginx-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-app
  labels:
    app: nginx
    tier: frontend
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "80"
spec:
  selector:
    app: nginx
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
