eventsProject/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eventsproject-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-path: "/events/actuator/health"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-interval: "10"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-timeout: "5"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-healthy-threshold: "2"
    service.beta.kubernetes.io/aws-load-balancer-healthcheck-unhealthy-threshold: "2"
spec:
  type: LoadBalancer
  selector:
    app: eventsproject
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8089
      name: http
